--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <!--<a href="http://www.eventbrite.fr/event/5268965618?ref=ebtnebtckt" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=5268965618" alt="Eventbrite - LyonJS #10 - Soirée test en JavaScript" /></a>-->
         </p>
 
-        <p>Au programme : AngularJS</p>
+        <p>Au programme : AngularJS réinvente le HTML</p>
 <ul>
 <li>Présentation théorique d'Angular JS par <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
 <li>Présentation théorique de Yeoman par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
@@ -97,11 +97,21 @@ impressions et de poursuivre la discussion.
 <p><strong>Prochaine session: <span style="color: red">Lundi 18 Fevrier</span> - 19:00.</strong></p>
 
 <h3>Quoi?</h3>
-<!--<p><a href="https://groups.google.com/d/topic/lyonjs/1wes7JsyWYA/discussion">Au programme</a>:</p>-->
 
-<blockquote>Soirée AngularJS</blockquote>
+<blockquote>Soirée AngularJS réinvente le HTML</blockquote>
 <p>par <a href="https://twitter.com/Swiip">Matthieu Lux</a> et <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></p>
-
+<strong>Applis web : AngularJS réinvente le HTML</strong>
+<ul>
+<li>Présentation théorique d'Angular JS par <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
+<li>Présentation théorique de Yeoman par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
+<li>Live coding interface CRUD from scratch par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
+<li>Exemples de code avancés avec <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
+</ul>
+<p>AngularJS est un framework JavaScript open source, développé par Google et dont la première version stable date de juin 2012. Il est dédié à la réalisation de la partie cliente des applications web de toutes tailles, de la petite application embarquée dans une page web jusqu’à la grosse application monopage.</p>
+<p>Grâce à des composants réutilisables, AngularJS transforme le HTML en un système de template déclaratif très puissant pour créer des vues dynamiques liées à un modèle de données. Les vues de l’application sont rafraîchies automatiquement à chaque changement dans le modèle.</p>
+<p>Alors que la plupart des autres frameworks JavaScript imposent énormément de manipulations de DOM et de gestion d’évènements, AngularJS affranchit le développeur de tout ce code technique fastidieux, et lui permet de se focaliser sur le code métier de son application web.</p>
+<p>En structurant les applications web en modules et services, avec injection automatique des dépendances, et en découplant complètement les vues du code de présentation, AngularJS rend les applications web facilement testables, à la fois par des tests unitaires de l’ensemble du code JavaScript et par l’automatisation de scénarios de tests fonctionnels.</p>
+<p>AngularJS apporte au développement natif côté client, en HTML et JavaScript, les bonnes pratiques mises en oeuvre depuis plusieurs années dans les meilleurs frameworks serveur.</p>
 
      </div>
      <div class="span4 menu-rg">
