--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p><strong>Prochaine session: <span style="color: red">Lundi 18 Fevrier</span> - 19:00.</strong></p>
 
         <p style="text-align: center; ">
-          <!--<a href="http://www.eventbrite.fr/event/5268965618?ref=ebtnebtckt" target="_blank"><img src="http://www.eventbrite.fr/custombutton?eid=5268965618" alt="Eventbrite - LyonJS #10 - Soirée test en JavaScript" /></a>-->
+          <a href="http://www.eventbrite.com/event/5268919480?ref=ebtnebtckt" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=5268919480" alt="Eventbrite - LyonJS#11 AngularJS réinvente le HTML" /></a>
         </p>
 
         <p>Au programme : AngularJS réinvente le HTML</p>
