--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
         <p>Plus d'infos: par <a href="https://groups.google.com/forum/#!forum/lyonjs">ici</a></p>
 
         <p class="buttons bounceIn animate">
-          <a href="http://www.eventbrite.com/event/5268919480?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=5268919480" alt="Eventbrite - LyonJS#11 AngularJS réinvente le HTML" /></a>
+          <a href="http://www.eventbrite.com/event/5268919480?ref=ebtn" target="_blank" style="display: inline-block;
+padding: 4px 10px 4px; font-size: 13px; line-height: 18px; height: 28px;"><img src="http://www.eventbrite.com/custombutton?eid=5268919480" alt="Eventbrite - LyonJS#11 AngularJS réinvente le HTML" /></a>
           <a href="https://groups.google.com/forum/#!forum/lyonjs" class="btn">Mailing-list</a>
           <a href="http://twitter.com/#!/lyonjs" class="btn">Twitter</a>
           <a href="https://github.com/lyonjs" class="btn">GitHub</a>
