--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
-        <meta name="description" content="">
+        <title>LyonJS - La communauté JavaScript lyonnaise</title>
+        <meta name="description" content="LyonJS meetup">
         <meta name="viewport" content="width=device-width">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -25,20 +26,31 @@
         <header>
           <h1>
             <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
-            --> Lundi 26 Novembre à 19h <--
+            --> Lundi 18 Fevrier à 19h <--
           </h1>
         </header>
         <article class="next clearfix">
-          <h2>Création de jeux vidéo en HTML5 <small>Samuel Ronce</small></h2>
-          <div class="row">
+          <h2>Applis web : AngularJS réinvente le HTML <small><a href="https://twitter.com/ThierryChatel">Thierry Chatel</a> et <a href="https://twitter.com/Swiip">Matthieu Lux</a></small></h2>
+          <div class="row-fluid">
             <div class="span4">
-              <img class="avatar" src="https://twimg0-a.akamaihd.net/profile_images/1725850023/creative5_a2_reasonably_small.png" alt="Web Creative5" class="avatar size128">
+              <img src="https://si0.twimg.com/profile_images/1843833164/tc-photo_bigger.jpg" alt="Thierry Chatel" class="avatar size73">
+              <img src="https://twimg0-a.akamaihd.net/profile_images/821941422/swiip_reasonably_small.jpg" alt="Matthieu Lux" class="avatar size128">
             </div>
-            <div class="span8 lead">
-              <p>Créer un jeu vidéo en HTML5 est une bonne initiative, surtout avec l'émergence des tablettes tactiles et Smartphones. D'ailleurs plusieurs entreprises se positionnent sur ce langage dans le milieu du Social Gaming ou dans le déploiement de jeux arcades. Mais comment réaliser un jeu rapidement et aisément avec une structure bien pensée ?</p>
-              <p>Cette conférence reprend une partie d'un ouvrage à paraître aux éditions Eyrolles : Jeux multijoueurs et sociaux en HTML5/JavaScript</p>
-              <img class="eventbrite" src="http://www.eventbrite.fr/custombutton?eid=4556783462" alt="Eventbrite - LyonJS #9 - Création de Jeux Vidéo en HTML5">
-              <p>Prix: gratuit, durée: 1h30</p>
+            <div class="span8">
+              <p>PLan:</p>
+              <ul>
+                <li>Présentation théorique d'Angular JS par <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
+                <li>Présentation théorique de Yeoman par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
+                <li>Live coding interface CRUD from scratch par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
+                <li>Exemples de code avancés avec <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
+              </ul>
+              <p>AngularJS est un framework JavaScript open source, développé par Google et dont la première version stable date de juin 2012. Il est dédié à  la réalisation de la partie cliente des applications web de toutes tailles, de la petite application embarquée dans une page web jusqu'à  la grosse application monopage.</p>
+              <p>Grâce à des composants réutilisables, AngularJS transforme le HTML en un système de template déclaratif très puissant pour créer des vues dynamiques liées à un modêle de données. Les vues de l'application sont rafraïchies automatiquement à chaque changement dans le modèle.</p>
+              <p>Alors que la plupart des autres frameworks JavaScript imposent énormément de manipulations de DOM et de gestion d'évènements, AngularJS affranchit le développeur de tout ce code technique fastidieux, et lui permet de se focaliser sur le code métier de son application web.</p>
+              <p>En structurant les applications web en modules et services, avec injection automatique des dépendances, et en découplant complètement les vues du code de présentation, AngularJS rend les applications web facilement testables, à la fois par des tests unitaires de l'ensemble du code JavaScript et par l'automatisation de scénarios de tests fonctionnels.</p>
+              <p>AngularJS apporte au développement natif côté client, en HTML et JavaScript, les bonnes pratiques mises en oeuvre depuis plusieurs années dans les meilleurs frameworks serveur.</p>
+              <p> <a href="http://www.eventbrite.com/event/5268919480?ref=ebtn" target="_blank" style="display: inline-block; font-size: 13px; line-height: 18px; height: 28px;"><img src="http://www.eventbrite.com/custombutton?eid=5268919480" alt="Eventbrite - LyonJS#11 AngularJS réinvente le HTML"></a>
+                Prix: gratuit, durée: 1h30</p>
             </div>
           </div>
         </article>
@@ -50,6 +62,16 @@
         <article class="previous">
           <h2>Les sessions precedentes</h2>
           <ul>
+            <li>
+              <h3>29 janvier 2013</h3>
+              <a href="#">Selenium 2 associé  QUnit et/ou Jasmine ainsi que leur automatisation pour une solution éprouvée</a> par Mathieu Sabourin(<a href="http://github.com/OniOni">Github</a>)
+              <a href="https://github.com/Filirom1/love-you-all">Le combo Mocha, Chai, Sinon.JS, PhantomJS, travis</a> par Romain Philibert(<a href="http://twitter.com/Filirom1"></a>)
+              <a href="https://github.com/Swiip/lightning-testacular">Lightning testacular</a> par (<a href="https://twitter.com/Swiip">Matthieu Lux</a>)
+            </li>
+            <li>
+              <h3>26 novembre 2012</h3>
+              <a href="">Création de jeux vidéo en HTML5</a> par Samuel Ronce(<a href="https://twitter.com/webcreative5">@webcreative5</a>)
+            </li>
             <li>
               <h3>23 octobre 2012</h3>
               <a href="http://fr.slideshare.net/Swiip/jquery-mobile-phonegap-14932296">Présentation de jQuery Mobile et PhoneGap</a> par Matthieu Lux (<a href="https://twitter.com/Swiip">@Swiip</a>)
@@ -83,6 +105,18 @@
         <article class="speakers">
           <h2>Les speakers</h2>
           <ul>
+            <li class="clearfix">
+              <img src="https://secure.gravatar.com/avatar/f3aa6a3c93b7a10bc02284341ff7f6e8?s=420&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png">
+              <h3>Mathieu Sabourin <small>OniOni</small></h3>
+              <p><a href="http://github.com/OniOni">Github</a></p>
+            </li>
+            <li class="clearfix">
+              <img class="avatar" src="https://twimg0-a.akamaihd.net/profile_images/1725850023/creative5_a2_reasonably_small.png" alt="Web Creative5" class="avatar size128">
+              <h3>Samuel Ronce <small>Web Creative5</small></h3>
+              <p><a href="http://webcreative5.net/">WebCreative 5</a></p>
+              <p><a href="https://twitter.com/creative5">@creative5</a></p>
+              <p><a href="http://github.com/RSamaium">Github</a></p>
+            </li>
             <li class="clearfix">
               <img src="https://twimg0-a.akamaihd.net/profile_images/821941422/swiip_reasonably_small.jpg" alt="Matthieu Lux" class="avatar size128">
               <h3>Matthieu Lux <small>Swiip</small></h3>
