--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
           <ul>
             <li>
               <h3>29 janvier 2013</h3>
-              <a href="#">Selenium 2 associé  QUnit et/ou Jasmine ainsi que leur automatisation pour une solution éprouvée</a> par Mathieu Sabourin(<a href="http://github.com/OniOni">Github</a>)
-              <a href="https://github.com/Filirom1/love-you-all">Le combo Mocha, Chai, Sinon.JS, PhantomJS, travis</a> par Romain Philibert(<a href="http://twitter.com/Filirom1"></a>)
+              <a href="#">Selenium 2 associé  QUnit et/ou Jasmine ainsi que leur automatisation pour une solution éprouvée</a> par Mathieu Sabourin(<a href="http://github.com/OniOni">Github</a>) <br />
+              <a href="https://github.com/Filirom1/love-you-all">Le combo Mocha, Chai, Sinon.JS, PhantomJS, travis</a> par Romain Philibert(<a href="http://twitter.com/Filirom1"></a>) <br />
               <a href="https://github.com/Swiip/lightning-testacular">Lightning testacular</a> par (<a href="https://twitter.com/Swiip">Matthieu Lux</a>)
             </li>
             <li>
