add some padding between speakers

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <img src="https://twimg0-a.akamaihd.net/profile_images/821941422/swiip_reasonably_small.jpg" alt="Matthieu Lux" class="avatar size128">
             </div>
             <div class="span8">
-              <p>PLan:</p>
+              <p>Plan:</p>
               <ul>
                 <li>Présentation théorique d'Angular JS par <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
                 <li>Présentation théorique de Yeoman par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
