hide github ribbon on small screen

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <link href='http://fonts.googleapis.com/css?family=Inconsolata:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     </head>
     <body data-spy="scroll" data-target="#navbar">
-      <a href="https://github.com/LyonJS"><img style="z-index:1050; position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+      <a href="https://github.com/LyonJS" class="ribbon"><img style="z-index:1050; position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
       <div id="navbar" class="navbar navbar-fixed-top navbar-inverse">
         <ul class="nav">
           <li class="active">
