add konami code

--- a/index.html
+++ b/index.html
@@ -243,6 +243,9 @@
         </article>
         <script type="text/javascript" src="js/vendor/jquery-1.8.2.min.js"></script>
         <script type="text/javascript" src="js/vendor/bootstrap.js"></script>
+        <script type="text/javascript" src="js/vendor/konami.js"></script>
+        <script type="text/javascript" src="js/vendor/cornify.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
         <script>
             var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
             (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
