--- a/index.html
+++ b/index.html
@@ -38,30 +38,22 @@
         <header id="event">
           <h1>
             <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
-            --> Lundi 18 Fevrier à 19h <--
+            --> Mardi 5 Mars à 19h <--
           </h1>
         </header>
         <article id="next">
-          <h2>AngularJS réinvente le HTML</h2>
+          <h2>Single Page Application avec KnockoutJS</h2>
           <div class="row-fluid">
             <div class="span4">
-              <img src="https://si0.twimg.com/profile_images/1843833164/tc-photo_bigger.jpg" alt="Thierry Chatel" class="avatar size73">
-              <img src="https://twimg0-a.akamaihd.net/profile_images/821941422/swiip_reasonably_small.jpg" alt="Matthieu Lux" class="avatar size128">
+              <img src="https://twimg0-a.akamaihd.net/profile_images/1285309666/6200_bigger.jpg" alt="Florent Pellet" class="avatar size73">
             </div>
-            <div class="span8">
-              <p>Plan:</p>
-              <ul>
-                <li>Présentation théorique d'Angular JS par <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
-                <li>Présentation théorique de Yeoman par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
-                <li>Live coding interface CRUD from scratch par <a href="https://twitter.com/Swiip">Matthieu Lux</a></li>
-                <li>Exemples de code avancés avec <a href="https://twitter.com/ThierryChatel">Thierry Chatel</a></li>
-              </ul>
-              <p>AngularJS est un framework JavaScript open source, développé par Google et dont la première version stable date de juin 2012. Il est dédié à  la réalisation de la partie cliente des applications web de toutes tailles, de la petite application embarquée dans une page web jusqu'à  la grosse application monopage.</p>
-              <p>Grâce à des composants réutilisables, AngularJS transforme le HTML en un système de template déclaratif très puissant pour créer des vues dynamiques liées à un modêle de données. Les vues de l'application sont rafraïchies automatiquement à chaque changement dans le modèle.</p>
-              <p>Alors que la plupart des autres frameworks JavaScript imposent énormément de manipulations de DOM et de gestion d'évènements, AngularJS affranchit le développeur de tout ce code technique fastidieux, et lui permet de se focaliser sur le code métier de son application web.</p>
-              <p>En structurant les applications web en modules et services, avec injection automatique des dépendances, et en découplant complètement les vues du code de présentation, AngularJS rend les applications web facilement testables, à la fois par des tests unitaires de l'ensemble du code JavaScript et par l'automatisation de scénarios de tests fonctionnels.</p>
-              <p>AngularJS apporte au développement natif côté client, en HTML et JavaScript, les bonnes pratiques mises en oeuvre depuis plusieurs années dans les meilleurs frameworks serveur.</p>
-              <p> <a href="http://www.eventbrite.com/event/5268919480?ref=ebtn" target="_blank" style="display: inline-block; font-size: 13px; line-height: 18px; height: 28px;"><img src="http://www.eventbrite.com/custombutton?eid=5268919480" alt="Eventbrite - LyonJS#11 AngularJS réinvente le HTML"></a>
+            <div class="span8 lead">
+              <p>Pendant cette conférence, vous aurez l'occasion de découvrir comment le SPA (Single Page Application) peut vous aider à structurer vos applications Web et améliorer l'expérience utilisateur.</p>
+
+              <p>Abandonnez la vision des sites Internet se résumant à une simple succession de pages, au profit d'applications, structurées grâce au pattern MVVM, avec des transitions et une fluidité de navigation.</p>
+              
+              <p>Pendant un live coding, vous aurez l’occasion de voir les différentes étapes du développement d'une SPA avec KnockoutJS, mais aussi comment pallier à certains problèmes techniques, comme la navigation avec HTML5 History, et la SEO avec Mustache en partageant les templates entre le client et le serveur.</p>
+              <p> <!--<a href="http://www.eventbrite.com/event/5268919480?ref=ebtn" target="_blank" style="display: inline-block; font-size: 13px; line-height: 18px; height: 28px;"><img src="http://www.eventbrite.com/custombutton?eid=5268919480" alt="Eventbrite - LyonJS#11 AngularJS réinvente le HTML"></a>-->
                 Prix: gratuit, durée: 1h30</p>
             </div>
           </div>
@@ -74,6 +66,11 @@
         <article id="previous">
           <h2>Les sessions precedentes</h2>
           <ul>
+            <li>
+              <h3>18 fevrier 2013</h3>
+              <a href="https://github.com/Swiip/yeoman-angular">Live coding Yeoman AngularJS</a> par Matthieu Lux(<a href="https://twitter.com/Swiip">@Swiip</a>)<br />
+              <a href="http://tchatel.github.com/slides-angularjs/">Présentation théorique d'Angular JS</a> et <a href="https://github.com/tchatel/angular-gamestore">Exemples de code avancés</a> par<a href="https://twitter.com/ThierryChatel">Thierry Chatel</a>
+            </li>
             <li>
               <h3>29 janvier 2013</h3>
               <a href="#">Selenium 2 associé  QUnit et/ou Jasmine ainsi que leur automatisation pour une solution éprouvée</a> par Mathieu Sabourin(<a href="http://twitter.com/mc_sabourin">@mc_sabourin</a>) <br />
@@ -116,6 +113,29 @@
         </article>
         <article id="speakers">
           <h2>Les speakers</h2>
+          <div class="row-fluid">
+            <div class="span6 row-fluid">
+              <div class="span4">
+                <img src="https://twimg0-a.akamaihd.net/profile_images/1843833164/tc-photo_bigger.jpg">
+              </div>
+              <div class="span8">
+                <h3>Thierry Chatel <small>tchatel</small></h3>
+                <p><a href="http://twitter.com/ThierryChatel">@ThierryChatel</a></p>
+                <p><a href="https://github.com/tchatel">Github</a></p>
+              </div>
+            </div>
+            <div class="span6 row-fluid">
+              <div class="span4">
+                <img src="https://twimg0-a.akamaihd.net/profile_images/1285309666/6200_bigger.jpg">
+              </div>
+              <div class="span8">
+                <h3>Florent Pellet<small></small></h3>
+                <p><a href="http://twitter.com/florentpellet">@florentpellet</a></p>
+                <p><a href="http://www.wittycoding.com/">WittyCoding</a></p>
+                <p><a href="http://www.florentpellet.fr">florentpellet.fr</a></p>
+              </div>
+            </div>
+          </div>
           <div class="row-fluid">
             <div class="span6 row-fluid">
               <div class="span4">
