Update EventBrite link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <p>Abandonnez la vision des sites Internet se résumant à une simple succession de pages, au profit d'applications, structurées grâce au pattern MVVM, avec des transitions et une fluidité de navigation.</p>
               
               <p>Pendant un live coding, vous aurez l’occasion de voir les différentes étapes du développement d'une SPA avec KnockoutJS, mais aussi comment pallier à certains problèmes techniques, comme la navigation avec HTML5 History, et la SEO avec Mustache en partageant les templates entre le client et le serveur.</p>
-              <p> <!--<a href="http://www.eventbrite.com/event/5268919480?ref=ebtn" target="_blank" style="display: inline-block; font-size: 13px; line-height: 18px; height: 28px;"><img src="http://www.eventbrite.com/custombutton?eid=5268919480" alt="Eventbrite - LyonJS#11 AngularJS réinvente le HTML"></a>-->
+              <p> <a href="http://www.eventbrite.com/event/5683457374?ref=ebtn" target="_blank" style="display: inline-block; font-size: 13px; line-height: 18px; height: 28px;"><img src="http://www.eventbrite.com/custombutton?eid=5683457374" alt="Eventbrite - LyonJS#12 Single Page Application avec KnockoutJS"></a>
                 Prix: gratuit, durée: 1h30</p>
             </div>
           </div>
