--- a/index.html
+++ b/index.html
@@ -38,23 +38,42 @@
         <header id="event">
           <h1>
             <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
-            --> Mardi 5 Mars à 19h <--
+            --> Mardi 9 Avirl à 19h <--
           </h1>
         </header>
         <article id="next">
-          <h2>Single Page Application avec KnockoutJS</h2>
+          <h2>Lightning talks by Cozycloud !</h2>
           <div class="row-fluid">
             <div class="span4">
               <img src="https://twimg0-a.akamaihd.net/profile_images/1285309666/6200_bigger.jpg" alt="Florent Pellet" class="avatar size73">
             </div>
             <div class="span8 lead">
-              <p>Pendant cette conférence, vous aurez l'occasion de découvrir comment le SPA (Single Page Application) peut vous aider à structurer vos applications Web et améliorer l'expérience utilisateur.</p>
-
-              <p>Abandonnez la vision des sites Internet se résumant à une simple succession de pages, au profit d'applications, structurées grâce au pattern MVVM, avec des transitions et une fluidité de navigation.</p>
-              
-              <p>Pendant un live coding, vous aurez l’occasion de voir les différentes étapes du développement d'une SPA avec KnockoutJS, mais aussi comment pallier à certains problèmes techniques, comme la navigation avec HTML5 History, et la SEO avec Mustache en partageant les templates entre le client et le serveur.</p>
-              <p> <a href="http://www.eventbrite.com/event/5683457374?ref=ebtn" target="_blank" style="display: inline-block; font-size: 13px; line-height: 18px; height: 28px;"><img src="http://www.eventbrite.com/custombutton?eid=5683457374" alt="Eventbrite - LyonJS#12 Single Page Application avec KnockoutJS"></a>
-                Prix: gratuit, durée: 1h30</p>
+             Présentation du contexte Technique de Cozy Cloud : Une Paas personnelle (10 min + 5min Questions/Réponses)
+Une wep app n'est plus monolithique mais faites de modules
+C'est le principe sur lequel se base l'architecture de Cozy Cloud
+Avec un module particulier pour gérer la persistence : le Data System
+Session de lightning talks (20 min + 5 min Q/R soit 5 min + 1min Q/R par talk)
+Comment gérer ses builds avec front-end avec Brunch
+Comment développer une API REST avec CompoundJS
+Coffeescript : avantages et inconvénients
+Déployer et gérer ses apps sur son serveur perso avec Haibu de Nodejitsu
+Comment faire sa single-page applicatiion en 10 minutes avec Cozy (10 min + 5 min Q/R)
+Bref retour sur l'architecture de Cozy : Assemblage des technologies citées dans les lightning talks
+Installer son environnement de développement en 4 lignes de commandes
+Modifier son code et le déployer sur son Cozy
+Retour au JS côté browser : Retour d'expérience sur le développement d'un éditeur de texte en JS (15 min + 5 min Q/R)
+Pourquoi un nouvel éditeur de texte ?
+Présentation des solutions existantes et des difficultés rencontrées (sélection, key events, copier/coller...)
+iFrame ou non ?
+Comment les singes fous peuvent vous aider à rendre votre éditeur plus robustes.
+Organisation de développement agile en télétravail avec les outils du moment (15min +  5 min Q/R)
+Notre organisation, notre workflow
+Ce que nous apporté l'open source dans cette organisation
+Comment les outils principaux nous sauvent la mise : github, trello, skype
+Pourquoi l'écosystème NodeJS s'est bien prếté à ce mode de fonctionnement
+Résultats concrets (j'essaierai de sortir des stats, promis !)
+             <p> <a href="http://www.eventbrite.com/event/5683457374?ref=ebtn" target="_blank" style="display: inline-block; font-size: 13px; line-height: 18px; height: 28px;"><img src="http://www.eventbrite.com/custombutton?eid=5683457374" alt="Eventbrite - LyonJS#12 Single Page Application avec KnockoutJS"></a>
+                Prix: gratuit, durée: 1h35</p>
             </div>
           </div>
         </article>
