--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@ Organisation de développement agile en télétravail avec les outils du moment 
     
 </li>
             </ul>
-             <p> <a href="http://www.eventbrite.com/event/5683457374?ref=ebtn" target="_blank" style="display: inline-block; font-size: 13px; line-height: 18px; height: 28px;"><img src="http://www.eventbrite.com/custombutton?eid=5683457374" alt="Eventbrite - LyonJS#12 Single Page Application avec KnockoutJS"></a>
+             <p> 
+             <a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#13 Lightenings Talks by Cozycloud" /></a>
                 Prix: gratuit, durée: 1h35</p>
             </div>
           </div>
