--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
           </h1>
         </header>
         <article id="next">
-          <h2>Lightning talks by Cozycloud !</h2>
+          <h2>Lightning talks by Cozycloud ! <a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#13 Lightenings Talks by Cozycloud" /></a>
+             </h2>
           <div class="row-fluid">
             <div class="span4">
               <img src="https://twimg0-a.akamaihd.net/profile_images/1285309666/6200_bigger.jpg" alt="Florent Pellet" class="avatar size73">
@@ -74,7 +75,6 @@ Organisation de développement agile en télétravail avec les outils du moment 
 </li>
             </ul>
              <p> 
-             <a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#13 Lightenings Talks by Cozycloud" /></a>
                 Prix: gratuit, durée: 1h35</p>
             </div>
           </div>
