--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
         <![endif]-->
 
         <header id="event">
-          <h1>
+          <h1>   
             <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
-            --> Mardi 9 Avirl à 19h <--
+            --> Mardi 9 Avril à 19h <--
+            <a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#13 Lightenings Talks by Cozycloud" /></a>
+          
           </h1>
         </header>
         <article id="next">
-          <h2>Lightning talks by Cozycloud ! <a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#13 Lightenings Talks by Cozycloud" /></a>
-             </h2>
+          <h2>Lightning talks by Cozycloud ! 
+            </h2>
           <div class="row-fluid">
             <div class="span4">
               <img src="https://twimg0-a.akamaihd.net/profile_images/1285309666/6200_bigger.jpg" alt="Florent Pellet" class="avatar size73">
