--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
             <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
             --> Mardi 9 Avril à 19h <-- 
             <br />
-            <a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#13 Lightenings Talks by Cozycloud" /></a>
-          
+            <a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank">
+            <img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#13 Lightenings Talks by Cozycloud" />
+            </a>
           </h1>
         </header>
         <article id="next">
@@ -90,6 +91,10 @@ Organisation de développement agile en télétravail avec les outils du moment 
         <article id="previous">
           <h2>Les sessions precedentes</h2>
           <ul>
+          <li>
+              <h3>5 Mars 2013</h3>
+              <a href="#">Single Page Application avec KnockoutJS</a> par Florent Pellet (<a href="https://twitter.com/florentpellet">@florentpellet</a>, <a href="https://github.com/fpellet">github</a>, <a href="http://florentpellet.com/">site</a>).
+          </li>
             <li>
               <h3>18 fevrier 2013</h3>
               <a href="https://github.com/Swiip/yeoman-angular">Live coding Yeoman AngularJS</a> par Matthieu Lux(<a href="https://twitter.com/Swiip">@Swiip</a>)<br />
