--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </h2>
           <div class="row-fluid">
             <div class="span4">
-              <img src="https://twimg0-a.akamaihd.net/profile_images/1285309666/6200_bigger.jpg" alt="Florent Pellet" class="avatar size73">
+              <img src="https://twimg0-a.akamaihd.net/profile_images/2702418800/b480948627e1e777d9a25f99cb51c24c.png" alt="CozyCloud" class="avatar size73">
             </div>
             <div class="span8 lead">
             <ul>
