--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
     <article id="where">
       <h2>Le lieux : Epitech</h2>
       <a href="http://maps.google.fr/maps/place?q=Epitech+Lyon&amp;hl=fr&amp;cid=2934105339601756812">Epitech Lyon, 86 Boulevard Marius Vivier Merle, 69003 Lyon</a>
-      <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?ie=UTF8&amp;cid=2934105339601756812&amp;q=E.P.I.T.E.C.H.+(Ecole+pour+l'Informatique+et+les+nouvelles+Technologies)&amp;gl=FR&amp;hl=fr&amp;t=m&amp;ll=45.754828,4.860764&amp;spn=0.017966,0.025749&amp;z=14&amp;output=embed"></iframe>
+     
+     <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.fr/maps?f=q&amp;source=s_q&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14&amp;output=embed"></iframe><br /><small><a href="http://maps.google.fr/maps?f=q&amp;source=embed&amp;hl=fr&amp;geocode=&amp;q=+86+Boulevard+Marius+Vivier+Merle&amp;aq=&amp;sll=45.756335,4.857887&amp;sspn=0.011064,0.022724&amp;ie=UTF8&amp;hq=&amp;hnear=86+Boulevard+Marius+Vivier+Merle,+69003+Lyon,+Rh%C3%B4ne,+Rh%C3%B4ne-Alpes&amp;ll=45.756341,4.857888&amp;spn=0.011064,0.022724&amp;t=m&amp;z=14" style="color:#0000FF;text-align:left">Agrandir le plan</a></small>
+     <!--<iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.fr/maps?ie=UTF8&amp;cid=2934105339601756812&amp;q=E.P.I.T.E.C.H.+(Ecole+pour+l'Informatique+et+les+nouvelles+Technologies)&amp;gl=FR&amp;hl=fr&amp;t=m&amp;ll=45.754828,4.860764&amp;spn=0.017966,0.025749&amp;z=14&amp;output=embed"></iframe>-->
     </article>
     <article id="previous">
       <h2>Les sessions precedentes</h2>
