--- a/index.html
+++ b/index.html
@@ -38,49 +38,25 @@
   <header id="event">
     <h1>
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
-      --&gt; Mardi 9 Avril à 19h &lt;--
+      --&gt; Mardi 14 Avril à 19h &lt;--
       <br>
-      <a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank">
-        <img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#13 Lightenings Talks by Cozycloud" />
-      </a>
+      <!--<a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank">
+        <img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#14 Lightenings Talks by Cozycloud" />
+      </a>-->
     </h1>
   </header>
   <article id="next">
-    <h2>Lightning talks by Cozycloud !</h2>
+    <h2>Comparaison des frameworks MVC : BackboneJS, EmberJS, AngularJS</h2>
     <div class="row-fluid">
       <div class="span4">
-        <img src="https://twimg0-a.akamaihd.net/profile_images/2702418800/b480948627e1e777d9a25f99cb51c24c.png" alt="CozyCloud" class="logo">
-        <a href="https://www.cozycloud.cc/" class="centered">Site web</a>
-        <a href="https://github.com/mycozycloud/" class="centered">Github</a>
-        <a href="https://twitter.com/mycozycloud/" class="centered">Twitter</a>
+        <img src="https://si0.twimg.com/profile_images/196515511/IMG_2224_bigger.JPG" alt="Loic Frering" class="logo">
+        <a href="https://github.com/loicfrering" class="centered">Github</a>
+        <a href="https://twitter.com/loicfrering" class="centered">Twitter</a>
       </div>
       <div class="span8 lead description">
-        <ul>
-          <li>
-            Présentation du contexte technique de Cozy Cloud : Une Paas personnelle (10 min + 5min Questions/Réponses)
-            <li>
-              Session de lightning talks (20 min + 4 min Q/R soit 5 min + 1min Q/R par talk)
-              <ul>
-                <li>Comment gérer ses builds front-ends avec Brunch</li>
-                <li>Comment développer une API REST avec CompoundJS</li>
-                <li>Coffeescript : avantages et inconvénients</li>
-                <li>Déployer et gérer ses apps sur son serveur perso avec Haibu de Nodejitsu</li>
-              </ul>
-            </li>
-            <li>
-              Comment faire sa single-page application en 10 minutes avec Cozy (10 min + 5 min Q/R)
-            </li>
-            <li>
-              Retour d'expérience sur le développement d'un éditeur de texte en JS (15 min + 5 min Q/R)
-            </li>
-            <li>
-              Organisation en développement agile et télétravail avec les outils du moment (15min +  5 min Q/R)
-            </li>
-          </ul>
-          <p>
-            Prix: gratuit, durée: 1h35
-          </p>
-        </div>
+        <p>Backbone, Ember et Angular sont trois frameworks en vogue de développement d'applications riches en JavaScript. Lorsque vous recherchez des comparatifs en ligne, les passionnés se déchirent et les avis sont souvent forts et tranchés : difficile de faire un choix.</p>
+	<p>Nous verrons donc les différences d'approche de chacun en essayant de nous imprégner de leur philosophie et spécificités. Aussi nous nous attarderons sur leurs forces et faiblesses en les illustrant au travers d'exemples tirés de l'implémentation d'une même application prétexte avec chacune de ces technologies.</p>
+	<p>Le but n'est pas de ressortir un vainqueur parmi les trois mais de voir en quoi leurs approches sont différentes afin que vous puissiez vous forger votre propre opinion.</p>
       </div>
     </article>
     <article id="where">
@@ -93,6 +69,10 @@
     <article id="previous">
       <h2>Les sessions precedentes</h2>
       <ul>
+        <li>
+          <h3>9 Avril 2013</h3>
+          <a href="#">Lightning talks by Cozycloud</a> par Cozycloud (<a href="https://twitter.com/mycozycloud/">@mycozycloud</a>, <a href="https://github.com/mycozycloud/">github</a>, <a href="https://www.cozycloud.cc/">site</a>).
+        </li>
         <li>
           <h3>5 Mars 2013</h3>
           <a href="#">Single Page Application avec KnockoutJS</a> par Florent Pellet (<a href="https://twitter.com/florentpellet">@florentpellet</a>, <a href="https://github.com/fpellet">github</a>, <a href="http://florentpellet.com/">site</a>).
@@ -144,6 +124,20 @@
     </article>
     <article id="speakers">
       <h2>Les speakers</h2>
+      <div class="row-fluid">
+        <div class="span6 row-fluid">
+          <div class="span4">
+            <img src="https://twimg0-a.akamaihd.net/profile_images/2702418800/b480948627e1e777d9a25f99cb51c24c.png" alt="CozyCloud" class="logo">
+          </div>
+          <div class="span8">
+            <h3>CozyCloud</h3>
+            <p><a href="https://www.cozycloud.cc/">Site web</a></p>
+            <p><a href="https://github.com/mycozycloud/">Github</a></p>
+            <p><a href="https://twitter.com/mycozycloud/">Twitter</a></p>
+          </div>
+        </div>
+        <div class="span6 row-fluid">&nbsp;</div>
+      </div>
       <div class="row-fluid">
         <div class="span6 row-fluid">
           <div class="span4">
