boulette sur la date

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <header id="event">
     <h1>
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
-      --&gt; Mardi 14 Avril à 19h &lt;--
+      --&gt; Mardi 14 Mai à 19h &lt;--
       <br>
       <!--<a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank">
         <img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#14 Lightenings Talks by Cozycloud" />
