--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
       --&gt; Mardi 14 Mai à 19h &lt;--
       <br>
-      <!--<a href="http://www.eventbrite.com/event/6038710947?ref=ebtn" target="_blank">
-        <img src="http://www.eventbrite.com/custombutton?eid=6038710947" alt="Eventbrite - LyonJS#14 Lightenings Talks by Cozycloud" />
-      </a>-->
+      <a href="http://www.eventbrite.com/event/6616027717?ref=ebtn" target="_blank">
+      	<img src="http://www.eventbrite.com/custombutton?eid=6616027717" alt="Eventbrite - LyonJS #14 : Backbone, Ember et Angular sont dans un bateau" />
+      </a>
     </h1>
   </header>
   <article id="next">
