--- a/index.html
+++ b/index.html
@@ -38,21 +38,25 @@
   <header id="event">
     <h1>
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
-      --&gt; Mardi 4 Juin à 19h &lt;--
-      <br>
-      <a href="http://www.eventbrite.com/event/6915066149?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6915066149" alt="Eventbrite - LyonJS #15 : Développer des apps Windows 8 en Javascript" /></a>
+      --&gt; Rendez-vous en septembre ! &lt;--
+      <!--<br>
+      <a href="http://www.eventbrite.com/event/6915066149?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6915066149" alt="Eventbrite - LyonJS #15 : Développer des apps Windows 8 en Javascript" /></a>-->
     </h1>
   </header>
   <article id="next">
-    <h2>Développer des apps Windows 8 en Javascript</h2>
+    <h2>LyonJS est en vacances !</h2>
     <div class="row-fluid">
-      <div class="span4">
-        <img src="https://si0.twimg.com/profile_images/1802255209/fnicollet.jpg" alt="Fabien Nicollet" class="logo">
-        <a href="https://twitter.com/fnicollet" class="centered">Twitter</a>
+      <div class="span6" style="padding: 0 20px 20px 20px;">
+        <img src="img/amphi.jpg" alt="Fabien Nicollet">
       </div>
-      <div class="span8 lead description">
-        <p>Pour cette dernière session de la saison, le LyonJS vous propose de découvrir comment développer des applications Windows 8 en utilisant les technologies web.</p>
-        <p>Cette session sera animé par Fabien Nicollet, qui nous avait déjà fait une présentation très intéressante l'an dernier sur cartodb et leaflet</p>
+      <div class="span6 lead description">
+        <p>Hello,</p>
+        <p>Pluôt que de se rendre malade à organiser des séances pendant l'été alors qu'il y a peu de monde et peu de speakers disponible, nous passons l'été à préparer la saison prochaine.</p>
+	<p>Nous sommes actuellement à la recherche de speakers pour la rentrées. Si vous êtes intéréssés, n'hésitez pas à nous contacter sur le Google Groups ou sur Twitter.</p>
+	<p>Nous recherchons actuellement à inviter des personnalités afin de vous proposer des sessions toujours plus intéressantes.</p>
+	<p>Normalement, à la sortie de la première séance de la rentrée, aura également lieu l'assemblée générale de l'association. Si vous voulez vous y impliquer, ne rater pas l'occasion !</p>
+	<p>A bientôt,</p>
+	<p>L'équipe du LyonJS</p>
       </div>
     </article>
     <article id="where">
@@ -65,6 +69,10 @@
     <article id="previous">
       <h2>Les sessions precedentes</h2>
       <ul>
+        <li>
+          <h3>4 Juin 2013</h3>
+          <a href="http://slid.es/fabiennicollet/lyonjswindows8">Développer des apps Windows 8 en JavaScript</a> par Fabien Nicollet (<a href="https://twitter.com/fnicollet">@fnicollet</a>, <a href="https://github.com/fnicollet/">github</a>).
+        </li>
         <li>
           <h3>14 Mai 2013</h3>
           <a href="http://loicfrering.github.io/mixit13/">Comparaison des frameworks MVC : BackboneJS, EmberJS, AngularJS</a> par Loic Frering (<a href="https://twitter.com/loicfrering/">@loicfrering</a>, <a href="https://github.com/loicfrering/">github</a>).
