--- a/index.html
+++ b/index.html
@@ -38,25 +38,29 @@
   <header id="event">
     <h1>
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
-      --&gt; Rendez-vous en septembre ! &lt;--
+      --&gt; Lundi 30 Septembre à 19h &lt;--
       <!--<br>
       <a href="http://www.eventbrite.com/event/6915066149?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6915066149" alt="Eventbrite - LyonJS #15 : Développer des apps Windows 8 en Javascript" /></a>-->
     </h1>
   </header>
   <article id="next">
-    <h2>LyonJS est en vacances !</h2>
+    <h2>Tour d’horizon de Node.js</h2>
     <div class="row-fluid">
-      <div class="span6" style="padding: 0 20px 20px 20px;">
-        <img src="img/amphi.jpg" alt="Fabien Nicollet">
-      </div>
-      <div class="span6 lead description">
-        <p>Hello,</p>
-        <p>Plutôt que de se rendre malade à organiser des séances pendant l'été alors qu'il y a peu de monde et peu de speakers disponibles, nous passons l'été à préparer la saison prochaine.</p>
-	<p>Nous sommes actuellement à la recherche de speakers pour la rentrée. Si vous êtes intéréssés, n'hésitez pas à nous contacter sur le Google Group ou sur Twitter.</p>
-	<p>Nous recherchons actuellement à inviter des personnalités afin de vous proposer des sessions toujours plus intéressantes.</p>
-	<p>Normalement, à la sortie de la première séance de la rentrée, aura également lieu l'assemblée générale de l'association. Si vous voulez vous y impliquer, ne ratez pas l'occasion !</p>
-	<p>A bientôt,</p>
-	<p>L'équipe du LyonJS</p>
+        <div class="span4">
+            <img src="https://si0.twimg.com/profile_images/1052261856/avatar_mw_large.png" alt="Christophe Porteneuve" class="logo"/>
+            <a href="https://twitter.com/porteneuve" class="centered">Twitter</a>
+            <a href="https://github.com/tdd" class="centered">GitHub</a>
+            <a href="http://tddsworld.com/" class="centered">http://tddsworld.com/</a>
+        </div>
+      <div class="span8 lead description">
+          <p><i>Le LyonJS est heureux d'accueillir pour cette rentrée Christophe Porteneuve, un des acteurs français important du monde JavaScript. Nous esperons que vous serez nombreux à venir le voir ce qui nous motivera à inviter d'autres personnalités.</i></p>
+          <h3>Tour d’horizon de Node.js</h3>
+          <p>Node.js est l’une des technologies les plus en vue de ces dernières années, des services web à la robotique; désormais bien industrialisé et doté d’un écosystème et d’une communauté très vifs, Node a remis sur le devant de la scène un modèle de programmation non bloquant / asynchrone et, surtout, des techniques de code élégantes pour réaliser celui-ci.</p>
+          <p>Dans cette présentation, Christophe Porteneuve va tenter de brosser un tableau de Node.js aussi concret que possible, en posant rapidement quelques notions fondamentales (Node, modules, npm, asynchrone…) et en déroulant le développement d’une application web qui mettra conjointement en œuvre quelques-uns des usages les plus célèbres, d’Express à Docco en passant par de l’OAuth 2, du Redis, des Web Sockets, Brunch, Mocha et Uglify.</p>
+          <p>Et peut-être même, qui sait, un petit bonus qui sortira du strict domaine dématérialisé du web pour se manifester physiquement.</p>
+          <p><strong>Prix :</strong> gratuit</p>
+          <p><strong>Durée :</strong> ~1h30</p>
+          <p><strong>After :</strong> Apéro !</p>
       </div>
     </article>
     <article id="where">
