--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
     <h1>
       <img src="http://ebmedia.eventbrite.com/s3-s3/eventlogos/22317976/4749053547-1.png" alt="LyonJS"><br />
       --&gt; Lundi 30 Septembre à 19h &lt;--
-      <!--<br>
-      <a href="http://www.eventbrite.com/event/6915066149?ref=ebtn" target="_blank"><img src="http://www.eventbrite.com/custombutton?eid=6915066149" alt="Eventbrite - LyonJS #15 : Développer des apps Windows 8 en Javascript" /></a>-->
+      <br><a href="https://www.eventbrite.fr/event/8364836451?ref=ebtn" target="_blank"><img src="https://www.eventbrite.fr/custombutton?eid=8364836451" alt="Eventbrite - LyonJS # 16 : Tour d’horizon de Node.js" /></a>
     </h1>
   </header>
   <article id="next">
